[package]
name = "substrate-chain-spec"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
substrate-chain-spec-derive = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
impl-trait-for-tuples = "0.1.3"
#network = { package = "substrate-network", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
network = { package = "substrate-network", path = "../../core/network" }
primitives = { package = "substrate-primitives", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
sr-primitives = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
tel = { package = "substrate-telemetry", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
