[package]
name = "darwinia-cli"
version = "0.1.0"
authors = ["Darwinia Network <hello@itering.com>"]
description = "Darwinia CLI interface."
edition = "2018"

[dependencies]
ansi_term = "0.12.1"
app_dirs = "1.2.1"
atty = "0.2.13"
clap = "2.33.0"
derive_more = "0.15.0"
env_logger = "0.7.0"
exit-future = "0.1.4"
futures = "0.1.29"
futures03 = { package = "futures-preview", version = "=0.3.0-alpha.19", features = ["compat"] }
fdlimit = "0.1.1"
lazy_static = "1.4.0"
log = "0.4.8"
names = "0.11.0"
regex = "1.3.1"
rpassword = "4.0.1"
serde = "1.0.103"
serde_json = "1.0.41"
structopt = "0.3.3"
time = "0.1.42"
tokio = "0.1.22"

panic-handler = { package = "substrate-panic-handler", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
client = { package = "substrate-client", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
header-metadata = { package = "substrate-header-metadata", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
network = { package = "substrate-network", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
sr-primitives = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
primitives = { package = "substrate-primitives", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
service = { package = "substrate-service", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }
state-machine = { package = "substrate-state-machine", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
substrate-telemetry = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
keyring = { package = "substrate-keyring", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }

[dev-dependencies]
tempdir = "0.3.7"

[features]
wasmtime = [
    "service/wasmtime",
]
