[package]
name = "ethash"
description = "An Apache-licensed Ethash implementation."
version = "0.4.0"
authors = ["Wei Tang <hi@that.world>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
byteorder = { version = "1", default-features = false }
rlp = { version = "0.4", default-features = false }
sha3 = { version = "0.8", default-features = false }

ethereum-types = { git = "https://github.com/darwinia-network/parity-common.git", default-features = false }
primitive-types = { git = "https://github.com/darwinia-network/parity-common.git", default-features = false, features = ["rlp"] }

[dev-dependencies]
hex-literal = "0.2.1"

[features]
default = ["std"]
std = [
  "byteorder/std",
  "rlp/std",
  "sha3/std",

  "ethereum-types/std",
  "primitive-types/std",
]