[package]
authors.workspace = true
description       = "Darwinia economic inflation mechanism implementation."
edition.workspace = true
name              = "dc-inflation"
readme            = "README.md"
version.workspace = true

[dependencies]
# darwinia
dc-types = { workspace = true }

# github
substrate-fixed = { default-features = false, git = "https://github.com/encointer/substrate-fixed" }

[dev-dependencies]
sp-arithmetic = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	# github
	"substrate-fixed/std",
]
