[package]
name = "merkle-mountain-range"
version = "0.1.0"
authors = ["Xavier Lau <c.estlavie@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = { version = "0.8.1", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
rstd = { package = "sr-std", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }
system = { package = "srml-system",  git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
    "blake2/std",
    "rstd/std",
]
