[package]
description = "Substrate offchain workers"
name = "substrate-offchain"
version = "2.0.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
bytes = "0.4.12"
client = { package = "substrate-client", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
sr-api = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
fnv = "1.0.6"
futures01 = { package = "futures", version = "0.1" }
futures-preview = "0.3.0-alpha.19"
futures-timer = "0.4.0"
log = "0.4.8"
threadpool = "1.7"
num_cpus = "1.10"
offchain-primitives = { package = "substrate-offchain-primitives", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
codec = { package = "parity-scale-codec", version = "1.0.0", features = ["derive"] }
parking_lot = "0.9.0"
primitives = { package = "substrate-primitives", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
rand = "0.7.2"
sr-primitives = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
#network = { package = "substrate-network", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
network = { package = "substrate-network", path = "../network" }
keystore = { package = "substrate-keystore", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
hyper = "0.12.35"
hyper-rustls = "0.17.1"

[features]
default = []
