[package]
authors.workspace = true
description       = "Darwinia chain core primitives."
edition.workspace = true
name              = "dc-primitives"
readme            = "README.md"
version.workspace = true

[dependencies]
# darwinia
dc-types = { workspace = true }

# frontier
fp-account = { workspace = true }

# polkadot-sdk
sp-core    = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
	# frontier
	"fp-account/std",

	# polkadot-sdk
	"sp-core/std",
	"sp-runtime/std",
]
