[package]
name = "substrate-rpc"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
api = { package = "substrate-rpc-api", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
#client = { package = "substrate-client", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
client = { package = "substrate-client", path = "../client" }
sr-api = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
codec = { package = "parity-scale-codec", version = "1.0.0" }
futures03 = { package = "futures-preview", version = "0.3.0-alpha.19", features = ["compat"] }
jsonrpc-pubsub = "14.0.3"
log = "0.4.8"
primitives = { package = "substrate-primitives", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
rpc = { package = "jsonrpc-core", version = "14.0.3" }
runtime_version = { package = "sr-version", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
serde_json = "1.0.41"
session = { package = "substrate-session", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
sr-primitives = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
rpc-primitives = { package = "substrate-rpc-primitives", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
state_machine = { package = "substrate-state-machine", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
substrate-executor = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
substrate-keystore = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }
hash-db = { version = "0.15.2", default-features = false }
parking_lot = { version = "0.9.0" }
