[package]
name = "sr-eth-primitives"
version = "0.1.0"
authors = ["hammeWang <dsw0602@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
rstd = { package = "sr-std", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }
sr-primitives = {git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }
substrate-primitives = {git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }
rlp = { version = "0.4.3", optional = true }
parity-crypto = { version = "0.4.2", features = ["publickey"] }
rlp_derive = { git = "https://github.com/paritytech/parity-ethereum.git", default-features = false }
ethereum-types = { version = "0.8.0", default-feature = false, features = ["serialize"] }
keccak-hash = "0.4.0"
ethbloom = { version = "0.8", default-features = false, features = ["serialize"] }
impl-codec = { version = "0.4", default-features = false, optional = true }
fixed-hash = { version = "0.4", default-features = false}
impl-rlp = { version = "0.2", default-features = false, optional = true }


[dev-dependencies]
support = { package = "srml-support", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop"}
rustc-hex = "2.0"
keccak-hasher = "0.1"
triehash-ethereum = { version = "0.2", git = "https://github.com/paritytech/parity-ethereum.git" }
hex-literal = "0.2.1"


[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "rstd/std",
    "sr-primitives/std",
    "substrate-primitives/std",
    "rlp/std",
    "keccak-hash/std",
    "ethereum-types/std",
    "parity-crypto/publickey",
    "ethereum-types/std",
    "ethereum-types/serialize",
    "ethbloom/std",
    "ethbloom/serialize",
    "impl-codec/std",
    "fixed-hash/std",
    "impl-rlp/std"
]

