[package]
name = "sr-eth-primitives"
version = "0.2.0"
authors = ["Darwinia Network <hello@darwinia.network>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
rstd = { package = "sr-std", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }
#substrate-primitives = {git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }
rlp = { package = "rlp", git = "https://github.com/darwinia-network/parity-common.git", default-features = false}
rlp_derive = { git = "https://github.com/darwinia-network/parity-common.git", default-features = false }
primitive-types = { git = "https://github.com/darwinia-network/parity-common.git", default-features = false, features = ["codec", "rlp"] }
ethereum-types = { git = "https://github.com/darwinia-network/parity-common.git", default-features = false, features = ["serialize"] }
keccak-hash = { git = "https://github.com/darwinia-network/parity-common.git", default-features = false}
impl-codec = { git = "https://github.com/darwinia-network/parity-common.git", default-features = false}
fixed-hash = { git = "https://github.com/darwinia-network/parity-common.git", default-features = false}
impl-rlp = { git = "https://github.com/darwinia-network/parity-common.git", default-features = false}
ethbloom = { git ="https://github.com/darwinia-network/parity-common.git", default-features = false, features = ["serialize"]}

[dev-dependencies]
support = { package = "srml-support", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop"}
rustc-hex = "2.0"
keccak-hasher = "0.15.2"
triehash = { package = "triehash", git = "https://github.com/darwinia-network/parity-common.git" }
hex-literal = "0.2.1"


[features]
default = ["std"]
std = [
    "serde/std",
    "codec/std",
    "rstd/std",
#    "substrate-primitives/std",
    "rlp/std",
    "keccak-hash/std",
    "primitive-types/std",
#    "primitive-types/serde",
#    "primitive-types/byteorder",
#    "primitive-types/rustc-hex",
#    "primitive-types/libc",
    "ethereum-types/std",
    "impl-codec/std",
    "fixed-hash/std",
    "impl-rlp/std",
    "ethbloom/std",
    "ethbloom/serialize",
]

