[package]
name = "substrate-test-runtime"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
log = { version = "0.4.8", optional = true }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
keyring = { package = "substrate-keyring", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", optional = true }
sr-api = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }
substrate-client = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", optional = true }
primitives = { package = "substrate-primitives", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }
app-crypto = { package = "substrate-application-crypto", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }
inherents = { package = "substrate-inherents", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }
aura-primitives = { package = "substrate-consensus-aura-primitives", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }
#babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }
babe-primitives = { package = "substrate-consensus-babe-primitives", path = "../../core/consensus/babe/primitives", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }
runtime_io = { package = "sr-io", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }
sr-primitives = {  git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }
session = { package = "substrate-session", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }
runtime_version = { package = "sr-version", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }
runtime_support = { package = "srml-support", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }
substrate-trie = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }
trie-db = { version = "0.15.2", default-features = false }
memory-db = { version = "0.15.2", default-features = false }
offchain-primitives = { package = "substrate-offchain-primitives", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false}
runtime-interface = { package = "substrate-runtime-interface", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false}
executive = { package = "srml-executive", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }
cfg-if = "0.1.10"
#srml-babe = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }
srml-babe = { path = "../../srml/babe", default-features = false }
#srml-timestamp = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }
srml-timestamp = { path = "../../srml/timestamp", default-features = false }
srml-system = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }
srml-system-rpc-runtime-api = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }
transaction-pool-api = { package = "substrate-transaction-pool-runtime-api", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }
block-builder-api = { package = "substrate-block-builder-runtime-api", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.4", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop" }

[features]
default = [
	"std",
]
std = [
	"log",
	"serde",
	"sr-api/std",
	"keyring",
	"codec/std",
	"rstd/std",
	"runtime_io/std",
	"runtime_support/std",
	"primitives/std",
	"inherents/std",
	"sr-primitives/std",
	"runtime_version/std",
	"aura-primitives/std",
	"babe-primitives/std",
	"primitives/std",
	"substrate-trie/std",
	"trie-db/std",
	"memory-db/std",
	"offchain-primitives/std",
	"executive/std",
	"srml-babe/std",
	"srml-timestamp/std",
	"srml-system/std",
	"srml-system-rpc-runtime-api/std",
	"app-crypto/std",
	"session/std",
	"runtime-interface/std",
	"transaction-pool-api/std",
	"block-builder-api/std",
	"substrate-client",
]
