[package]
name = "pallet-authority-discovery"
version = "0.5.0"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "FRAME pallet for authority discovery"
edition = "2018"
license = "GPL-3.0"
homepage = "https://darwinia.network/"
repository = "https://github.com/darwinia-network/darwinia/"

[dependencies]
# crates.io
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }

# github.com
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }
frame-system = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }

# TODO https://github.com/darwinia-network/darwinia/issues/347
pallet-session = { default-features = false, features = ["historical" ], path = "../session" }

sp-application-crypto = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }
sp-authority-discovery = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }
sp-core = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }
sp-io = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }
sp-runtime = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }
sp-std = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }

[dev-dependencies]
# TODO https://github.com/darwinia-network/darwinia/issues/347
sp-staking = { default-features = false, path = "../../primitives/staking" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",

	"frame-support/std",
	"frame-system/std",

	"pallet-session/std",

	"sp-application-crypto/std",
	"sp-authority-discovery/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
