[package]
name = "pallet-babe"
version = "0.5.0"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "Consensus extension module for BABE consensus. Collects on-chain randomness from VRF outputs and manages epoch transitions."
edition = "2018"
license = "GPL-3.0"
homepage = "https://darwinia.network/"
repository = "https://github.com/darwinia-network/darwinia/"

[dependencies]
# crates.io
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"] }
hex-literal = "0.2.1"
serde = { version = "1.0.101", optional = true }

# github.com
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }
frame-system = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }

# TODO https://github.com/darwinia-network/darwinia/issues/347
pallet-session = { default-features = false, path = "../session" }
pallet-timestamp = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }

sp-consensus-babe = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }
sp-inherents = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }
sp-io ={ default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }
sp-runtime = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }
# TODO https://github.com/darwinia-network/darwinia/issues/347
sp-staking = { default-features = false, path = "../../primitives/staking" }
sp-std = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }
sp-timestamp = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }

[dev-dependencies]
lazy_static = "1.4.0"
parking_lot = "0.10.0"

sp-core = { git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }
sp-version = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }

substrate-test-runtime = { git = "https://github.com/darwinia-network/substrate.git", tag = "v2.0.0-alpha.3" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",

	"frame-support/std",
	"frame-system/std",

	"pallet-session/std",
	"pallet-timestamp/std",

	"sp-consensus-babe/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-std/std",
	"sp-timestamp/std",
]
