[package]
name = "darwinia-claims"
version = "0.1.0"
authors = ["Darwinia Network <hello@darwinia.network>"]
edition = "2018"

[dependencies]
# crates.io
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
rustc-hex = { version = "2.0.1", default-features = false }
serde = { version = "1.0.101", optional = true }

# github.com
frame-support = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.2" }
frame-system = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.2" }
sp-io = { version = "2.0.0-alpha.2", optional = true, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.2" }
sp-runtime = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.2" }
sp-std = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-alpha.2" }

[dev-dependencies]

[features]
default = ["std"]
std = [
	"codec/std",
	"rustc-hex/std",
	"serde",

	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
